# senseBox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  box.config.example  init.sh
.github/workflows/: build.yml  c-cpp.yml
src/: common.h  config.c  config.h  connection.c  connection.h  main.c  sensor.c  sensor.h  tools.c  tools.h
test/: config_test.c  connection_test.c  main_test.c  sensor_test.c  tools_test.c
